--- a/Src/Core/Compilers/Compilers.csproj
+++ b/Src/Core/Compilers/Compilers.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Expressions\Expression.cs" />
     <Compile Include="Tools\Simulations\Simulator.cs" />
     <Compile Include="Types\TypeData.cs" />
+    <Compile Include="VersionInfos\VersionInformation.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Components\Components.csproj">
